--- a/owncast.service
+++ b/owncast.service
@@ -6,7 +6,7 @@ Type=simple
 User=owncast
 Group=owncast
 WorkingDirectory=/var/lib/owncast
-ExecStart=/usr/bin/owncast -backupdir /var/lib/owncast/backup -database /var/lib/owncast/database -webserverport $WEB_PORT -rtmpport $RTMP_PORT -streamkey $STREAM_KEY
+ExecStart=/usr/bin/owncast -backupdir /var/lib/owncast/backup -database /var/lib/owncast/database -logdir /var/log/owncast -webserverport $WEB_PORT -rtmpport $RTMP_PORT -streamkey $STREAM_KEY
 Restart=on-failure
 RestartSec=5
 
