Make `DClint` work

--- a/.github/workflows/dclint.yml
+++ b/.github/workflows/dclint.yml
@@ -1,16 +1,28 @@
-name: DClinter
-
+name: DCLint
 on:
-  pull_request:
   push:
-    branches:
-      - main
+    paths:
+      - 'docker-compose.yml'
+  pull_request:
     paths:
       - 'docker-compose.yml'
 
 jobs:
   lint:
+    name: Lint Docker Compose
     runs-on: ubuntu-latest
+    
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+
+      - name: Install DCLint
+        run: npm install -g dclint
+
+      - name: Run DCLint
+        run: dclint .
