--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 # Owncast settings
 ADMIN_PASSWORD=admin123
 STREAM_KEY=hackme123
-ADMIN_IPS=x.x.x.x
+ADMIN_IPS=0.0.0.0/0
 
 # SSL settings
 SSL_HOSTNAME=stream.example.org
