--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -3,6 +3,10 @@ on:
   schedule:
     - cron: '0 0 * * 1'
   workflow_dispatch:
+
+permissions:
+  contents: write
+
 jobs:
   update-owncast:
     runs-on: ubuntu-latest
