--- a/.env.example
+++ b/.env.example
@@ -1,20 +1,20 @@
 # Owncast settings
-ADMIN_PASSWORD=admin123
-STREAM_KEY=hackme123
-ADMIN_IPS=0.0.0.0/0
-STREAM_NAME=
-LOGO_URL=
+ADMIN_PASSWORD="admin123"
+STREAM_KEY="hackme123"
+ADMIN_IPS="0.0.0.0/0"
+STREAM_NAME=""
+LOGO_URL=""
 
 # S3 settings
-S3_ENDPOINT=
-S3_ACCESS_KEY=
-S3_SECRET_KEY=
-S3_BUCKET=
-S3_REGION=auto
-S3_ACL=private
-S3_PATH_PREFIX=
-S3_FORCE_PATH_STYLE=false
-VIDEO_SERVING_ENDPOINT=
+S3_ENDPOINT=""
+S3_ACCESS_KEY=""
+S3_SECRET_KEY=""
+S3_BUCKET=""
+S3_REGION="auto"
+S3_ACL="private"
+S3_PATH_PREFIX=""
+S3_FORCE_PATH_STYLE="false"
+VIDEO_SERVING_ENDPOINT=""
 
 # SSL settings
-SSL_HOSTNAME=stream.example.org
+SSL_HOSTNAME="stream.example.org"
